--- a/index copy.html
+++ b/index copy.html
@@ -281,7 +281,7 @@
         <div class="container text-center">
             <h6 class="subtitle">Testmonial</h6>
             <h6 class="section-title mb-4">What People Say About Me</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
+            <p class="mb-5 pb-4">Over the years, I’ve had the privilege of collaborating with incredible clients and teams who have trusted me to bring their ideas to life. Here’s what some of them have to say about working with me:</p>
 
 
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
