--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Steller landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Steller Landing page | Free Bootstrap 4.1 landing page</title>
+    <meta name="description" content="Innovative Tech Lead with 7+ years of experience in mobile and web
+    development, specializing in scalable architectures with Flutter,
+    NestJS, and AWS. Proven track record leading cross-functional teams to
+    deliver high-impact solutions that reduced deployment times by 30% and
+    improved driver tracking accuracy by 80%. Expert in IoT, automation,
+    and cloud-native development with a focus on digital transformation
+    and operational excellence.">
+    <meta name="author" content="Miguel Angel Flores">
+    <title>Miguel Angel Flores - Tech Lead</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Steller main styles -->
@@ -914,13 +920,13 @@
         </div>
         <div class="col-sm-6">
           <div class="socials">
-            <a class="social-item" href="https://www.facebook.com/MiguelhAngelh"
+            <a target="_blank" class="social-item" href="https://www.facebook.com/MiguelhAngelh"
             ><i class="ti-facebook"></i></a
           >
-          <a class="social-item" href="https://www.instagram.com/miguelhangelhflores/"
+          <a target="_blank" class="social-item" href="https://www.instagram.com/miguelhangelhflores/"
             ><i class="ti-instagram"></i></a
           >
-          <a class="social-item" href="https://www.linkedin.com/in/miguelhangelh/"
+          <a target="_blank" class="social-item" href="https://www.linkedin.com/in/miguelhangelh/"
             ><i class="ti-linkedin"></i></a
           </div>
         </div>
