--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   
         <div class="buttons pt-3">
           <a target="_blank" href="https://wa.me/59175604267?text=%C2%A1Hola!%20%F0%9F%91%8B%20Estoy%20interesado/a%20en%20tus%20servicios/trabajo.%20%C2%BFPodr%C3%ADas%20proporcionarme%20m%C3%A1s%20informaci%C3%B3n?%20%C2%A1Gracias!" class="btn btn-primary rounded">HIRE ME</a>
-          <button class="btn btn-dark rounded">DOWNLOAD CV</button>
+          <a target="_blank"  href="https://drive.google.com/file/d/1nkeMrZa_YSlHypPogRWmdiYdBBU0nlkj/view?usp=sharing" class="btn btn-dark rounded">DOWNLOAD CV</a>
         </div>
   
         <div class="socials mt-4">
@@ -124,7 +124,8 @@
             and cloud-native development with a focus on digital transformation
             and operational excellence.
           </p>
-          <button class="btn btn-primary rounded mt-3">DOWNLOAD CV</button>
+          <a target="_blank"  href="https://drive.google.com/file/d/1nkeMrZa_YSlHypPogRWmdiYdBBU0nlkj/view?usp=sharing" class="btn btn-primary rounded mt-3">DOWNLOAD CV</a>
+
         </div>
       </div>
     </div>
@@ -748,7 +749,8 @@
               <div class="card-body">
                 <img src="assets/imgs/avatar-5.jpeg" alt="" />
                 <p>
-                  Supportive as a person with a set of skills to manage teams also encourages learning in the field, likes to stay on top of new technologies to keep the team sharp.</p>
+                  Supportive as a person with a set of skills to manage teams also encourages learning in the field, likes to stay on top of new technologies to keep the team sharp. Personally helped me to improve my skills in better ways.
+                </p>
                 <h1 class="title">Ronald Acosta</h1>
                 <h1 class="subtitle">FullStack Developer</h1>
                 <div class="socialscenter w-10 mt-4 text-center">
