--- a/index.html
+++ b/index.html
@@ -119,10 +119,9 @@
 
       <!-- Header-widget -->
       <div class="widget">
-        <div class="widget-item">
           <div class="widget-item">
             <h2>3</h2>
-            <p>StartUps</p>
+            <p>Startups</p>
           </div>
           <div class="widget-item">
             <h2>9</h2>
@@ -132,7 +131,6 @@
             <h2>1</h2>
             <p>Software Factory</p>
           </div>
-        </div>
       </div>
     </header>
     <!-- End of Page Header -->
