--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
                     recommend him for any development job
                   </p>
                   <h1 class="title">Dante Rojas Lizondo</h1>
-                  <h1 class="subtitle">Manager</h1>
+                  <h1 class="subtitle">Project Manager</h1>
                   <div class="socialscenter w-10 mt-4 text-center">
                     <a
                       target="_blank"
