--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 89%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -270,7 +270,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 83%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -285,7 +285,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 95%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -300,7 +300,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -315,7 +315,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -330,7 +330,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -345,7 +345,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -362,7 +362,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -378,7 +378,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -393,7 +393,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -408,7 +408,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -423,7 +423,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -438,7 +438,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -453,7 +453,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -468,7 +468,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -483,7 +483,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -498,7 +498,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -513,7 +513,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -528,7 +528,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -545,7 +545,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -555,12 +555,12 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <h6 class="mb-3">Figma, Adobe XD, Prototyping, UX Research</h6>
+            <h6 class="mb-3">Figma</h6>
             <div class="progress">
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
@@ -576,7 +576,7 @@
               <div
                 class="progress-bar bg-primary"
                 role="progressbar"
-                style="width: 90%"
+                style="width: 100%"
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
