--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           I am a versatile and results-driven Full Stack Developer with
           expertise in designing, developing, and managing end-to-end digital
           solutions. My skill set spans across UI/UX design, web and app
-          development, backend systems, and cloud DevOps, ensuring seamless and
+          development, backend systems, and cloud DevOps junior, ensuring seamless and
           scalable solutions for businesses. With a strong focus on user-centric
           design and robust functionality, I deliver high-quality applications
           that align with both user needs and business goals.
@@ -193,14 +193,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-3 mb-4">
-            <div class="custom-card card border">
-              <div class="card-body">
-                <i class="icon ti-desktop"></i>
-                <h5>Developer Web Flutter | React | Angular</h5>
-              </div>
-            </div>
-          </div>
+         
           <div class="col-sm-6 col-md-3 mb-4">
             <div class="custom-card card border">
               <div class="card-body">
@@ -209,7 +202,14 @@
               </div>
             </div>
           </div>
-        
+          <div class="col-sm-6 col-md-3 mb-4">
+            <div class="custom-card card border">
+              <div class="card-body">
+                <i class="icon ti-desktop"></i>
+                <h5>FrontEnd Flutter | React | Angular</h5>
+              </div>
+            </div>
+          </div>
           <div class="col-sm-6 col-md-3 mb-4">
             <div class="custom-card card border">
               <div class="card-body">
