--- a/index.html
+++ b/index.html
@@ -235,14 +235,14 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-3 mb-4">
-            <div class="custom-card card border">
-              <div class="card-body">
-                <i class="icon ti-cloud"></i>
-                <h5>  Apple Store Deployment</h5>
+            <div class="col-sm-6 col-md-3 mb-4">
+              <div class="custom-card card border">
+                <div class="card-body">
+                  <i class="icon ti-cloud"></i>
+                  <h5>  Apple Store Deployment</h5>
+                </div>
               </div>
             </div>
-          </div>
         </div>
       </div>
     </section>
@@ -266,6 +266,21 @@
         <div class="row text-left">
           <div class="col-sm-6">
             <h6 class="mb-3">Flutter</h6>
+            <div class="progress">
+              <div
+                class="progress-bar bg-primary"
+                role="progressbar"
+                style="width: 100%"
+                aria-valuenow="25"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              >
+                <span>89%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <h6 class="mb-3">Scrum</h6>
             <div class="progress">
               <div
                 class="progress-bar bg-primary"
