--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
             <div class="carousel-item">
               <div class="card testmonial-card border">
                 <div class="card-body">
-                  <img src="assets/imgs/none.jpg" alt="" />
+                  <img src="assets/imgs/dante.jpeg" alt="" />
                   <p>
                     I worked with Miguel Flores 3 years. Those 3 years were
                     amazing because I learned from him and he learned of me (I
