--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
     />
     <meta
       name="description"
-      content="Innovative Tech Lead with 7+ years of experience in mobile and web
-    development, specializing in scalable architectures with Flutter,
-    NestJS, and AWS. Proven track record leading cross-functional teams to
-    deliver high-impact solutions that reduced deployment times by 30% and
-    improved driver tracking accuracy by 80%. Expert in IoT, automation,
-    and cloud-native development with a focus on digital transformation
-    and operational excellence."
+      content="Innovative Tech Lead with 7+ years of experience in mobile and web development, specializing in scalable architectures using Flutter, NestJS, and AWS. Proven ability to lead cross-functional teams and deliver high-impact solutions, cutting deployment times by 30% and enhancing driver tracking accuracy by 80%. Expertise in IoT, automation, and cloud-native development, with a strong focus on digital transformation and operational excellence."
     />
     <meta name="author" content="Miguel Angel Flores" />
     <title>Miguel Angel Flores - Tech Lead</title>
@@ -164,11 +158,11 @@
             <p class="subtitle">Tech Lead - Full Stack Developer</p>
             <p>
               Innovative Tech Lead with 7+ years of experience in mobile and web
-              development, specializing in scalable architectures with Flutter,
-              NestJS, and AWS. Proven track record leading cross-functional
-              teams to deliver high-impact solutions that reduced deployment
-              times by 30% and improved driver tracking accuracy by 80%. Expert
-              in IoT, automation, and cloud-native development with a focus on
+              development, specializing in scalable architectures using Flutter,
+              NestJS, and AWS. Proven ability to lead cross-functional teams and
+              deliver high-impact solutions, cutting deployment times by 30% and
+              enhancing driver tracking accuracy by 80%. Expertise in IoT,
+              automation, and cloud-native development, with a strong focus on
               digital transformation and operational excellence.
             </p>
             <a
@@ -190,11 +184,11 @@
         <p class="mb-5 pb-4">
           I am a versatile and results-driven Full Stack Developer with
           expertise in designing, developing, and managing end-to-end digital
-          solutions. My skill set spans across UI/UX design, web and app
-          development, backend systems, and cloud DevOps junior, ensuring
-          seamless and scalable solutions for businesses. With a strong focus on
-          user-centric design and robust functionality, I deliver high-quality
-          applications that align with both user needs and business goals.
+          solutions. My skill set spans UI/UX design, web and app development,
+          backend systems, and junior-level cloud DevOps, ensuring seamless and
+          scalable solutions for businesses. With a strong focus on user-centric
+          design and robust functionality, I deliver high-quality applications
+          that align with both user needs and business goals.
         </p>
 
         <div class="row">
@@ -267,10 +261,10 @@
         <h6 class="subtitle">Skills</h6>
         <h6 class="section-title mb-4">Why Choose me</h6>
         <p class="mb-5 pb-4">
-          Experienced developer and tech lead with a proven track record in
+          Experienced Developer and Tech Lead with a proven track record in
           designing, developing, and delivering innovative software solutions.
           Skilled in full-stack development, agile methodologies, and cloud
-          technologies. I thrive in leading cross-functional teams, mentoring
+          technologies. Adept at leading cross-functional teams, mentoring
           developers, and driving technical excellence to achieve business
           goals. Passionate about building scalable systems and delivering
           impactful results.
@@ -641,10 +635,10 @@
         <p class="mb-5 pb-4">
           Explore a collection of my most impactful projects, where innovation
           meets execution. From leading cross-functional teams to developing
-          cutting-edge solutions, each piece reflects my passion for technology,
-          problem-solving, and delivering exceptional results. Dive in to see
-          how I transform ideas into reality and drive success through
-          creativity and technical expertise."
+          cutting-edge solutions, each project reflects my passion for
+          technology, problem-solving, and delivering exceptional results. Dive
+          in to see how I turn ideas into reality and drive success through
+          creativity and technical expertise.
         </p>
 
         <div class="row">
