--- a/index.html
+++ b/index.html
@@ -758,9 +758,28 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
+              <div class="card testmonial-card border">
+                <div class="card-body">
+                  <img src="assets/imgs/morrisopazo_logo.jpeg" alt="" />
+                  <p></p>
+                  <h1 class="title">Morris & Opazo | Partner AWS</h1>
+                  <h1 class="subtitle">Servicios y consultoría de TI</h1>
+                  <div class="socialscenter w-10 mt-4 text-center">
+                    <a
+                      target="_blank"
+                      class="social-item"
+                      href="https://www.linkedin.com/company/morrisopazo/"
+                      ><i class="ti-linkedin"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item ">
               <div class="card testmonial-card border">
                 <div class="card-body">
                   <img src="assets/imgs/avatar-1.jpg" alt="" />
