--- a/index.html
+++ b/index.html
@@ -726,6 +726,22 @@
                 </div>
               </div>
             </div>
+          
+          </div>
+          <div class="col-sm-4">
+            <div class="img-wrapper">
+              <img src="assets/imgs/tincazo.jpg" alt="" />
+              <div class="overlay">
+                <div class="overlay-infos">
+                  <h5>Tinkazo</h5>
+                  <a
+                    target="_blank"
+                    href="https://appadvice.com/app/tincazo/1470422497"
+                    ><i class="ti-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
