--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
               <img src="assets/imgs/folio-1.png" alt="" />
               <div class="overlay">
                 <div class="overlay-infos">
-                  <h5>Mobi</h5>
+                  <h5>Mobi Latam</h5>
                   <a
                     target="_blank"
                     href="https://play.google.com/store/apps/details?id=mobi.lat.app"
