--- a/index.html
+++ b/index.html
@@ -726,7 +726,6 @@
                 </div>
               </div>
             </div>
-          
           </div>
           <div class="col-sm-4">
             <div class="img-wrapper">
@@ -795,11 +794,19 @@
                 </div>
               </div>
             </div>
-            <div class="carousel-item ">
+            <div class="carousel-item">
               <div class="card testmonial-card border">
                 <div class="card-body">
                   <img src="assets/imgs/avatar-1.jpg" alt="" />
-                  <p></p>
+                  <p>
+                    Miguel is the kind of skilled developer you want on your
+                    team—passionate, collaborative, and endlessly proactive. He
+                    solves problems with equal parts grit and humor, turning
+                    challenges into wins while lifting everyone around him.
+                    Beyond his talent, he’s a trusted friend who’ll always have
+                    your back. Miss working with him, but can’t wait to see what
+                    he builds next! 🚀
+                  </p>
                   <h1 class="title">Carlos Olivera Terrazas</h1>
                   <h1 class="subtitle">CTO @ DATEC</h1>
                   <div class="socialscenter w-10 mt-4 text-center">
