--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <header class="header" id="home">
       <div class="container">
         <div class="infos">
-          <h6 class="subtitle">Hello, I'm</h6>
+          <h2 class="subtitle">Hello, I'm</h2>
           <h1 class="title">Miguel Angel Flores</h1>
           <p>Tech Lead - Full Stack Developer</p>
 
@@ -139,19 +139,29 @@
           </div>
 
           <div class="socials mt-4">
-            <a class="social-item" href="https://www.facebook.com/MiguelhAngelh"
-              ><i class="ti-facebook"></i
-            ></a>
             <a
-              class="social-item"
-              href="https://www.instagram.com/miguelhangelhflores/"
-              ><i class="ti-instagram"></i
-            ></a>
-            <a
-              class="social-item"
-              href="https://www.linkedin.com/in/miguelhangelh/"
-              ><i class="ti-linkedin"></i
-            ></a>
+                target="_blank"
+                class="social-item"
+                href="https://www.facebook.com/MiguelhAngelh"
+                aria-label="Visita mi perfil de Facebook"
+                ><i class="ti-facebook"></i
+              ></a>
+              <a
+                target="_blank"
+                class="social-item"
+                href="https://www.instagram.com/miguelhangelhflores/"
+                aria-label="Visita mi perfil de Instagram"
+
+                ><i class="ti-instagram"></i
+              ></a>
+              <a
+                target="_blank"
+                class="social-item"
+                href="https://www.linkedin.com/in/miguelhangelh/"
+                aria-label="Visita mi perfil de LinkedIn"
+
+                ><i class="ti-linkedin"></i
+              ></a>
           </div>
         </div>
         <div class="img-holder">
@@ -215,8 +225,8 @@
     <!-- Service Section -->
     <section id="service" class="section">
       <div class="container text-center">
-        <h6 class="subtitle">Service</h6>
-        <h6 class="section-title mb-4">What I Do</h6>
+        <h2 class="subtitle">Service</h2>
+        <h3 class="section-title mb-4">What I Do</h3>
         <p class="mb-5 pb-4">
           I am a versatile and results-driven Full Stack Developer with
           expertise in designing, developing, and managing end-to-end digital
@@ -294,8 +304,8 @@
     <!-- Skills Section -->
     <section class="section">
       <div class="container text-center">
-        <h6 class="subtitle">Skills</h6>
-        <h6 class="section-title mb-4">Why Choose Me</h6>
+        <h2 class="subtitle">Skills</h2>
+        <h3 class="section-title mb-4">Why Choose Me</h3>
         <p class="mb-5 pb-4">
           Experienced Developer and Tech Lead with a proven track record in
           designing, developing, and delivering innovative software solutions.
@@ -317,8 +327,9 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
-                <span>89%</span>
+                <span>100%</span>
               </div>
             </div>
           </div>
@@ -332,6 +343,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>89%</span>
               </div>
@@ -347,6 +359,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>83%</span>
               </div>
@@ -362,6 +375,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>95%</span>
               </div>
@@ -377,6 +391,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -407,6 +422,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -422,6 +438,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -439,6 +456,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -455,6 +473,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -470,6 +489,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -485,6 +505,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -500,6 +521,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -515,6 +537,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -530,6 +553,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -545,6 +569,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -560,6 +585,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -575,6 +601,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -590,6 +617,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -605,6 +633,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -622,6 +651,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -637,6 +667,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -653,6 +684,7 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
               >
                 <span>90%</span>
               </div>
@@ -666,8 +698,8 @@
     <!-- Portfolio Section -->
     <section id="portfolio" class="section">
       <div class="container text-center">
-        <h6 class="subtitle">Portfolio</h6>
-        <h6 class="section-title mb-4">Check My Wonderful Works</h6>
+        <h2 class="subtitle">Portfolio</h2>
+        <h3 class="section-title mb-4">Check My Wonderful Works</h3>
         <p class="mb-5 pb-4">
           Explore a collection of my most impactful projects, where innovation
           meets execution. From leading cross-functional teams to developing
@@ -786,8 +818,8 @@
     <!-- Testimonial Section -->
     <section id="testmonial" class="section">
       <div class="container text-center">
-        <h6 class="subtitle">Testimonial</h6>
-        <h6 class="section-title mb-4">What People Say About Me</h6>
+        <h2 class="subtitle">Testimonial</h2>
+        <h3 class="section-title mb-4">What People Say About Me</h3>
         <p class="mb-5 pb-4">
           Over the years, I’ve had the privilege of collaborating with
           incredible clients and teams who have trusted me to bring their ideas
@@ -986,8 +1018,8 @@
     <!-- Contact Section -->
     <section id="contact" class="position-relative section">
       <div class="container text-center">
-        <h6 class="subtitle">Contact</h6>
-        <h6 class="section-title mb-4">Get In Touch With Me</h6>
+        <h2 class="subtitle">Contact</h2>
+        <h3 class="section-title mb-4">Get In Touch With Me</h3>
         <p class="mb-5 pb-4">
           I’m always excited to connect and explore new opportunities! Whether
           you have a project idea, need technical expertise, or just want to
@@ -997,8 +1029,8 @@
 
         <div class="contact text-left">
           <div class="form">
-            <h6 class="subtitle">Available 24/7</h6>
-            <h6 class="section-title mb-4">Get In Touch</h6>
+            <h2 class="subtitle">Available 24/7</h2>
+            <h3 class="section-title mb-4">Get In Touch</h3>
             <img
               src="assets/imgs/avatar.jpeg"
               alt="Miguel Angel Flores - Tech Lead"
@@ -1066,18 +1098,23 @@
                 target="_blank"
                 class="social-item"
                 href="https://www.facebook.com/MiguelhAngelh"
+                aria-label="Visita mi perfil de Facebook"
                 ><i class="ti-facebook"></i
               ></a>
               <a
                 target="_blank"
                 class="social-item"
                 href="https://www.instagram.com/miguelhangelhflores/"
+                aria-label="Visita mi perfil de Instagram"
+
                 ><i class="ti-instagram"></i
               ></a>
               <a
                 target="_blank"
                 class="social-item"
                 href="https://www.linkedin.com/in/miguelhangelh/"
+                aria-label="Visita mi perfil de LinkedIn"
+
                 ><i class="ti-linkedin"></i
               ></a>
             </div>
