--- a/index.html
+++ b/index.html
@@ -407,6 +407,8 @@
                 aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
+                aria-label="Progreso de 100%"
+
               >
                 <span>90%</span>
               </div>
@@ -855,6 +857,7 @@
                     <a
                       target="_blank"
                       class="social-item"
+                      aria-label="Visita el perfil de LinkedIn de Morris & Opazo"
                       href="https://www.linkedin.com/company/morrisopazo/"
                       ><i class="ti-linkedin"></i
                     ></a>
@@ -881,6 +884,7 @@
                     <a
                       target="_blank"
                       class="social-item"
+                      aria-label="Visita el perfil de LinkedIn de Carlos Olivera"
                       href="https://www.linkedin.com/in/colivera"
                       ><i class="ti-linkedin"></i
                     ></a>
@@ -904,6 +908,7 @@
                     <a
                       target="_blank"
                       class="social-item"
+                      aria-label="Visita el perfil de LinkedIn de Dante Rojas Lizondo"
                       href="https://www.linkedin.com/in/danterojaslizondo43/"
                       ><i class="ti-linkedin"></i
                     ></a>
@@ -924,6 +929,7 @@
                     <a
                       target="_blank"
                       class="social-item"
+                      aria-label="Visita el perfil de LinkedIn de Dalvinder Salinas Saldaña"
                       href="https://www.linkedin.com/in/dalvinder-salinas/"
                       ><i class="ti-linkedin"></i
                     ></a>
@@ -950,6 +956,7 @@
                     <a
                       target="_blank"
                       class="social-item"
+                      aria-label="Visita el perfil de LinkedIn de Alex Regiani"
                       href="https://www.linkedin.com/in/alexflutterdev/"
                       ><i class="ti-linkedin"></i
                     ></a>
@@ -973,6 +980,8 @@
                     <a
                       target="_blank"
                       class="social-item"
+                      aria-label="Visita el perfil de LinkedIn de Ronald Acosta"
+
                       href="https://www.linkedin.com/in/rdev-697701272/"
                       ><i class="ti-linkedin"></i
                     ></a>
