--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     />
     <meta
       name="description"
-      content="Tech Lead and Full Stack Developer with 7+ years of experience in mobile and web development. Specialized in Flutter, NestJS, and AWS. Hire me for your next project."
+      content="Tech Lead and Full Stack Developer with 7+ years of experience in mobile and web development. Specialized in Flutter, NestJS, and AWS."
     />
     <meta
       name="keywords"
       content="Tech Lead, Full Stack Developer, Flutter, NestJS, AWS, mobile development, web development, IoT, automation, digital transformation"
     />
     <meta name="author" content="Miguel Angel Flores" />
-    <title>Miguel Angel Flores - Tech Lead | Full Stack Developer | Flutter, NestJS, AWS</title>
+    <title>Miguel Angel Flores - Tech Lead | Flutter, NestJS, AWS</title>
 
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="Miguel Angel Flores - Tech Lead and Full Stack Developer" />
@@ -23,6 +23,7 @@
     <meta property="og:image" content="https://miguelangelflores.me/assets/imgs/avatar.jpeg" />
     <meta property="og:url" content="https://miguelangelflores.me" />
     <meta property="og:type" content="website" />
+    <link rel="icon" type="image/jpg" href="assets/imgs/favicon.jpg"/>
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -200,7 +201,7 @@
             />
           </div>
           <div class="pl-md-4 col-md-9">
-            <h1 class="title">Miguel Angel Flores</h1>
+            <h2 class="title">Miguel Angel Flores</h2>
             <p class="subtitle">Tech Lead - Full Stack Developer</p>
             <p>
               Innovative Tech Lead with 7+ years of experience in mobile and web
@@ -851,8 +852,8 @@
                 <div class="card-body">
                   <img src="assets/imgs/morrisopazo_logo.jpeg" alt="Morris & Opazo Logo" loading="lazy" />
                   <p></p>
-                  <h1 class="title">Morris & Opazo | Partner AWS</h1>
-                  <h1 class="subtitle">IT Services and Consulting</h1>
+                  <h2 class="title">Morris & Opazo | Partner AWS</h2>
+                  <h2 class="subtitle">IT Services and Consulting</h2>
                   <div class="socialscenter w-10 mt-4 text-center">
                     <a
                       target="_blank"
@@ -878,8 +879,8 @@
                     your back. Miss working with him, but can’t wait to see what
                     he builds next! 🚀
                   </p>
-                  <h1 class="title">Carlos Olivera Terrazas</h1>
-                  <h1 class="subtitle">CTO @ DATEC</h1>
+                  <h2 class="title">Carlos Olivera Terrazas</h2>
+                  <h2 class="subtitle">CTO @ DATEC</h2>
                   <div class="socialscenter w-10 mt-4 text-center">
                     <a
                       target="_blank"
@@ -902,8 +903,8 @@
                     hope). He is a great developer and wonderful person. I
                     recommend him for any development job
                   </p>
-                  <h1 class="title">Dante Rojas Lizondo</h1>
-                  <h1 class="subtitle">Project Manager</h1>
+                  <h2 class="title">Dante Rojas Lizondo</h2>
+                  <h2 class="subtitle">Project Manager</h2>
                   <div class="socialscenter w-10 mt-4 text-center">
                     <a
                       target="_blank"
@@ -921,10 +922,10 @@
                 <div class="card-body">
                   <img src="assets/imgs/avatar-3.jpeg" alt="Dalvinder Salinas Saldaña" loading="lazy" />
                   <p></p>
-                  <h1 class="title">Dalvinder Salinas Saldaña</h1>
-                  <h1 class="subtitle">
+                  <h2 class="title">Dalvinder Salinas Saldaña</h2>
+                  <h2 class="subtitle">
                     Server Administrator | Kubernetes Administrator
-                  </h1>
+                  </h2>
                   <div class="socialscenter w-10 mt-4 text-center">
                     <a
                       target="_blank"
@@ -950,8 +951,8 @@
                     the code into understanding the business and pushing back on
                     decisions that are not on the best interests of the company.
                   </p>
-                  <h1 class="title">Alex Regiani</h1>
-                  <h1 class="subtitle">Senior Flutter Developer</h1>
+                  <h2 class="title">Alex Regiani</h2>
+                  <h2 class="subtitle">Senior Flutter Developer</h2>
                   <div class="socialscenter w-10 mt-4 text-center">
                     <a
                       target="_blank"
@@ -974,8 +975,8 @@
                     of new technologies to keep the team sharp. Personally
                     helped me to improve my skills in better ways.
                   </p>
-                  <h1 class="title">Ronald Acosta</h1>
-                  <h1 class="subtitle">FullStack Developer</h1>
+                  <h2 class="title">Ronald Acosta</h2>
+                  <h2 class="subtitle">FullStack Developer</h2>
                   <div class="socialscenter w-10 mt-4 text-center">
                     <a
                       target="_blank"
