--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       content="Tech Lead, Full Stack Developer, Flutter, NestJS, AWS, mobile development, web development, IoT, automation, digital transformation"
     />
     <meta name="author" content="Miguel Angel Flores" />
-    <title>Miguel Angel Flores - Tech Lead | Flutter, NestJS, AWS</title>
+    <title>Miguel Angel Flores | Tech Lead | Senior Flutter</title>
 
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="Miguel Angel Flores - Tech Lead and Full Stack Developer" />
