--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
               <div class="card testmonial-card border">
                 <div class="card-body">
                   <img src="assets/imgs/morrisopazo_logo.jpeg" alt="Morris & Opazo Logo" loading="lazy" />
-                  <p></p>
+                  <p>Working with Miguel was a real pleasure. Very present throughout the project we worked on together, open to listen and to solve any kind of problems.</p>
                   <h2 class="title">Morris & Opazo | Partner AWS</h2>
                   <h2 class="subtitle">IT Services and Consulting</h2>
                   <div class="socialscenter w-10 mt-4 text-center">
