--- a/privacy.html
+++ b/privacy.html
@@ -50,7 +50,7 @@
   <p>La votación es completamente anónima. La aplicación no almacena ni asocia la identidad del usuario con el voto emitido.</p>
 
   <h2>Contacto</h2>
-  <p>Si tienes preguntas sobre esta política de privacidad, puedes escribirnos a: <a href="mailto:soporte@tuvotoapp.com">soporte@tuvotoapp.com</a></p>
+  <p>Si tienes preguntas sobre esta política de privacidad, puedes escribirnos a: <a href="mailto:miguelhangelh@gmail.com">miguelhangelh@gmail.com</a></p>
 
   <p>Gracias por confiar en nosotros y participar en este ejercicio democrático.</p>
 
