--- a/privacy.html
+++ b/privacy.html
@@ -20,39 +20,43 @@
 
   <h1>Política de Privacidad</h1>
 
-  <p>Fecha de entrada en vigencia: <strong>22 de junio de 2025</strong></p>
+  <p><strong>Fecha de entrada en vigencia:</strong> 22 de junio de 2025</p>
 
-  <p>Esta aplicación ha sido desarrollada con el objetivo de permitir a los usuarios expresar su apoyo a un candidato presidencial mediante un sistema de votación única por dispositivo.</p>
+  <p>Esta aplicación ha sido desarrollada para permitir que los usuarios expresen su apoyo a un candidato presidencial mediante una votación única por dispositivo. Valoramos tu privacidad y nos comprometemos a proteger la información que recopilamos.</p>
 
-  <h2>Información que recopilamos</h2>
-  <p>Para garantizar la integridad del proceso de votación, la aplicación genera una clave única basada en los siguientes datos del dispositivo:</p>
+  <h2>Datos que recopilamos</h2>
+  <p>La aplicación genera una firma única del dispositivo utilizando únicamente información técnica, con el fin de asegurar que cada usuario solo pueda emitir un voto por dispositivo.</p>
+  <p>Los datos utilizados para generar esta clave son:</p>
   <ul>
-    <li>Identificador del dispositivo</li>
+    <li>Identificador único del dispositivo (como Android ID o Identifier for Vendor en iOS)</li>
     <li>Modelo del dispositivo</li>
     <li>Marca del dispositivo</li>
-    <li>Sistema operativo</li>
+    <li>Versión del sistema operativo</li>
   </ul>
-  <p><strong>No</strong> recopilamos nombres, correos electrónicos, números de teléfono ni ninguna otra información personal del usuario.</p>
+
+  <p><strong>No recopilamos ni almacenamos datos personales</strong> como nombre, dirección de correo electrónico, número de teléfono, ubicación o contenido del dispositivo.</p>
 
   <h2>Uso de la información</h2>
-  <p>La clave generada a partir de los datos del dispositivo se utiliza únicamente para identificar de forma anónima un voto por dispositivo. Esta clave no se puede usar para identificar al usuario individualmente.</p>
+  <p>La información del dispositivo se utiliza exclusivamente para generar una clave única y anónima. Esta clave garantiza que solo se emita un voto por dispositivo. No se almacena la información original, solo el valor encriptado (hash).</p>
 
   <h2>Seguridad</h2>
-  <p>Todos los datos se manejan de forma segura y cifrada. Además, la aplicación verifica que el dispositivo:</p>
+  <p>Todos los datos se manejan de manera segura y se cifran localmente antes de ser procesados. Además, la aplicación implementa medidas de seguridad para garantizar la integridad del sistema de votación:</p>
   <ul>
-    <li>No esté rooteado</li>
-    <li>No sea un emulador</li>
-    <li>No esté en modo desarrollador</li>
+    <li>Detecta si el dispositivo está rooteado</li>
+    <li>Detecta si se está ejecutando en un emulador</li>
+    <li>Verifica si el modo desarrollador está activado</li>
   </ul>
-  <p>Estas medidas buscan prevenir el uso fraudulento de la aplicación.</p>
 
   <h2>Transparencia y anonimato</h2>
-  <p>La votación es completamente anónima. La aplicación no almacena ni asocia la identidad del usuario con el voto emitido.</p>
+  <p>La votación es completamente anónima. No hay forma de vincular la clave generada con la identidad del usuario. Solo se utiliza para validar que el dispositivo ha votado.</p>
+
+  <h2>Cumplimiento con Google Play</h2>
+  <p>Esta aplicación declara el uso de identificadores del dispositivo, tal como lo exige la política de Datos del Usuario de Google Play. No compartimos esta información con terceros.</p>
 
   <h2>Contacto</h2>
   <p>Si tienes preguntas sobre esta política de privacidad, puedes escribirnos a: <a href="mailto:miguelhangelh@gmail.com">miguelhangelh@gmail.com</a></p>
 
-  <p>Gracias por confiar en nosotros y participar en este ejercicio democrático.</p>
+  <p>Gracias por participar en este ejercicio democrático y por confiar en nuestra aplicación.</p>
 
 </body>
 </html>
